--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,21 +9,16 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnCallAPI"
+        style="@style/FilledButtonTheme"
         android:layout_width="wrap_content"
+        android:text="Next"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_purple_20"
-        android:backgroundTint="@color/colorPrimary"
-        android:paddingHorizontal="@dimen/dp_40"
-        android:text="Call API"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:textSize="@dimen/sp_16"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="@dimen/dp_32"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.basalbody.app.utils.MxbTextView
+    <com.basalbody.app.utils.BasalTextView
         android:id="@+id/tvApiResponse"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -36,50 +31,24 @@
         app:layout_constraintTop_toBottomOf="@id/btnCallAPI"
         app:textStyle="medium"
         tools:text="Api Response" />
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnTermCondition"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_purple_20"
         android:layout_marginTop="@dimen/dp_15"
-        android:backgroundTint="@color/colorPrimary"
-        android:paddingHorizontal="@dimen/dp_40"
         android:text="Terms &amp; Conditions"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:textSize="@dimen/sp_16"
+        style="@style/OutlinedButtonTheme"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-       app:layout_constraintTop_toBottomOf="@+id/tvApiResponse"/>
+        app:layout_constraintTop_toBottomOf="@+id/tvApiResponse" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/buttonLogout"
+    <com.basalbody.app.utils.BasalTextInputLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_purple_20"
-        android:layout_marginTop="@dimen/dp_15"
-        android:backgroundTint="@color/colorPrimary"
-        android:paddingHorizontal="@dimen/dp_40"
-        android:text="@string/label_logout"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:textSize="@dimen/sp_16"
-        app:layout_constraintEnd_toEndOf="@+id/btnTermCondition"
-        app:layout_constraintStart_toStartOf="@+id/btnTermCondition"
-        app:layout_constraintTop_toBottomOf="@+id/btnTermCondition"/>
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/buttonDeleteAccount"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bg_purple_20"
-        android:layout_marginTop="@dimen/dp_15"
-        android:backgroundTint="@color/colorPrimary"
-        android:paddingHorizontal="@dimen/dp_40"
-        android:text="@string/label_delete_account"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:textSize="@dimen/sp_16"
-        app:layout_constraintEnd_toEndOf="@+id/btnTermCondition"
-        app:layout_constraintStart_toStartOf="@+id/btnTermCondition"
-        app:layout_constraintTop_toBottomOf="@+id/buttonLogout"/>
+        app:layout_constraintTop_toBottomOf="@id/btnTermCondition"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginHorizontal="@dimen/dp_20"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
