--- a/app/src/main/res/layout/layout_alert.xml
+++ b/app/src/main/res/layout/layout_alert.xml
@@ -47,7 +47,7 @@
                     android:layout_margin="@dimen/dp_5"
                     android:orientation="vertical">
 
-                    <com.basalbody.app.utils.MxbTextView
+                    <com.basalbody.app.utils.BasalTextView
                         android:id="@+id/txtTitle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -57,7 +57,7 @@
                         app:textStyle="medium"
                         tools:text="Title" />
 
-                    <com.basalbody.app.utils.MxbTextView
+                    <com.basalbody.app.utils.BasalTextView
                         android:id="@+id/txtMessage"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
