--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="MxbTextInputLayout">
+    <declare-styleable name="BasalTextInputLayout">
         <attr name="inputType">
             <flag name="none" value="0x00000000" />
             <flag name="text" value="0x00000001" />
@@ -80,17 +80,6 @@
             <flag name="light" value="5" />
             <flag name="extraLight" value="6" />
         </attr>
-    </declare-styleable>
-
-    <declare-styleable name="UTToolBar">
-        <attr name="title" format="string"/>
-        <attr name="isTitleVisible" format="boolean"/>
-        <attr name="toolbar_menu" format="reference"/>
-        <attr name="isMenuVisible" format="boolean"/>
-        <attr name="isOfflineButtonVisible" format="boolean"/>
-        <attr name="isBackArrowVisible" format="boolean"/>
-        <attr name="endText" format="string"/>
-        <attr name="isEndTextVisible" format="boolean"/>
     </declare-styleable>
     <!--Below portion is for custom calender view-->
     <!-- The xml resource that is inflated and used as the day cell view, must be provided. -->
@@ -184,89 +173,6 @@
         <attr name="blurOverlayColor" format="color" />
     </declare-styleable>
 
-    <declare-styleable name="MxbRangeSeekBar">
-        <attr name="minValue" format="float" />
-        <attr name="prefixThumbText" format="string" />
-        <attr name="suffixThumbText" format="string"/>
-        <attr name="maxValue" format="float" />
-        <attr name="stepValue" format="float" />
-        <attr name="valueType">
-            <enum name="intType" value="6" />
-            <enum name="floatType" value="7" />
-        </attr>
-
-        <!-- ready -->
-        <attr name="enableGradient" format="boolean" />
-        <attr name="textColor" format="color" />
-
-        <attr name="showThumbsText">
-            <enum name="none" value="0" />
-            <enum name="below" value="1" />
-            <enum name="above" value="2" />
-            <enum name="center" value="3" />
-        </attr>
-
-        <attr name="thumbsTextMargin" format="dimension" />
-        <attr name="additionalTextMargin" format="dimension" />
-        <attr name="thumbTextSize" format="dimension" />
-        <attr name="showAdditionalText">
-            <enum name="none" value="0" />
-            <enum name="below" value="1" />
-            <enum name="above" value="2" />
-            <enum name="center" value="3" />
-        </attr>
-
-        <attr name="roundedCorners" format="boolean" />
-        <attr name="barHeight" format="dimension" />
-
-        <attr name="active" format="boolean" />
-
-        <attr name="textFont" format="reference" />
-
-        <attr name="centerText" format="string" />
-        <attr name="rightText" format="string" />
-        <attr name="leftText" format="string" />
-
-        <attr name="thumbsNormal" format="reference" />
-        <attr name="thumbsPressed" format="reference" />
-        <attr name="thumbsDisabled" format="reference" />
-
-        <attr name="sideColor" format="color" />
-        <attr name="transitionColor" format="color" />
-        <attr name="centerColor" format="color" />
-    </declare-styleable>
-
-    <declare-styleable name="SmoothBottomBar">
-        <attr name="menu" format="reference" />
-        <attr name="backgroundColor" format="color" />
-        <attr name="indicatorColor" format="color" />
-        <attr name="indicatorRadius" format="dimension" />
-        <attr name="sideMargins" format="dimension" />
-        <attr name="itemPadding" format="dimension" />
-        <attr name="itemPaddingHorizontal" format="dimension" />
-        <attr name="bottomNavigationTextColor" format="color" />
-        <attr name="badgeColor" format="color" />
-        <attr name="itemFontFamily" format="reference" />
-        <attr name="bottomBar_textSize" format="dimension" />
-        <attr name="iconSize" format="dimension" />
-        <attr name="iconMargin" format="dimension" />
-        <attr name="iconTint" format="color" />
-        <attr name="iconTintActive" format="color" />
-        <attr name="cornerRadius" format="dimension" />
-        <attr name="activeItem" format="integer" />
-        <attr name="duration" format="integer" />
-        <attr name="corners">
-            <flag name="none" value="0" />
-            <flag name="top_left" value="1" />
-            <flag name="top_right" value="2" />
-            <flag name="bottom_right" value="4" />
-            <flag name="bottom_left" value="8" />
-            <flag name="all" value="15" />
-        </attr>
-    </declare-styleable>
-
-    <attr name="SmoothBottomBarStyle" format="reference" />
-
     <declare-styleable name="OtpView">
         <attr name="activeColor" format="reference|color" />
         <attr name="passiveColor" format="reference|color" />
@@ -291,20 +197,7 @@
         </attr>
     </declare-styleable>
 
-    <declare-styleable name="MxbColoredTextView">
-        <attr name="fullText" format="string" />
-        <attr name="ctv_textStyle">
-            <flag name="normal" value="0" />
-            <flag name="bold" value="1" />
-            <flag name="medium" value="2" />
-            <flag name="semiBold" value="3" />
-            <flag name="extraBold" value="4" />
-            <flag name="light" value="5" />
-            <flag name="extraLight" value="6" />
-        </attr>
-    </declare-styleable>
-
-    <declare-styleable name="MxbTextView">
+    <declare-styleable name="BasalTextView">
         <attr name="textStyle">
             <flag name="normal" value="0" />
             <flag name="bold" value="1" />
@@ -314,12 +207,6 @@
             <flag name="light" value="5" />
             <flag name="extraLight" value="6" />
         </attr>
-    </declare-styleable>
-
-    <declare-styleable name="ViewDropdown">
-        <attr name="hintText" format="string" />
-        <attr name="isLabelVisible" format="boolean" />
-        <attr name="labelText" format="string" />
     </declare-styleable>
 
     <attr name="dampingRatio" format="float" />
@@ -346,10 +233,10 @@
         <attr name="dotsElevation" format="dimension" />
     </declare-styleable>
 
-    <declare-styleable name="MxbNoDataFound">
-        <attr name="mndf_title" format="string"/>
-        <attr name="mndf_description" format="string"/>
-        <attr name="mndf_image" format="reference"/>
+    <declare-styleable name="BasalNoDataFound">
+        <attr name="bndf_title" format="string"/>
+        <attr name="bndf_description" format="string"/>
+        <attr name="bndf_image" format="reference"/>
     </declare-styleable>
 
 </resources>
