--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,11 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#EB4755</color>
-    <color name="colorPrimary">#EF5C0A</color>
+    <color name="colorPrimary">#FFBBCE</color>
+    <color name="colorButtonText">#303030</color>
+
+
+
     <color name="colorSecondary">#204F70</color>
     <color name="colorSecondary4">#E9EDF1</color>
     <color name="blurColor">#804C708C</color>
