--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Base.Theme.AbcToGoMXB" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
@@ -25,37 +25,28 @@
         <item name="android:backgroundTint">@color/color_peach_extra_light</item>
     </style>
 
-    <style name="CustomRatingBarStyle" parent="Widget.AppCompat.RatingBar">
-        <item name="android:progressDrawable">@drawable/selector_rating_bar</item>
-        <item name="android:numStars">5</item>
+    <style name="FilledButtonTheme" parent="Widget.AppCompat.Button">
+        <item name="android:textSize">@dimen/sp_16</item>
+        <item name="android:fontFamily">@font/geist_semi_bold</item>
+        <item name="android:background">@drawable/bg_filled_app_button</item>
+        <item name="android:drawableEnd">@drawable/ic_button_icon</item>
+        <item name="android:drawablePadding">@dimen/dp_10</item>
+        <item name="android:paddingVertical">@dimen/dp_10</item>
+        <item name="android:paddingHorizontal">@dimen/dp_34</item>
+        <item name="android:textColor">@color/colorButtonText</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 
-    <style name="MediumTextButtonStyle" parent="Widget.AppCompat.Button">
-        <item name="fontFamily">@font/gmp_ref_typeface_brand_medium</item>
+    <style name="OutlinedButtonTheme" parent="Widget.AppCompat.Button">
         <item name="android:textSize">@dimen/sp_16</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="android:gravity">center</item>
-        <item name="android:padding">@dimen/dp_18</item>
-        <item name="android:background">@drawable/bg_white_radius_10</item>
-        <item name="android:ellipsize">end</item>
+        <item name="android:fontFamily">@font/geist_regular</item>
+        <item name="android:background">@drawable/bg_outlined_app_button</item>
+        <item name="android:drawableEnd">@drawable/ic_button_icon</item>
+        <item name="android:drawablePadding">@dimen/dp_10</item>
+        <item name="android:paddingVertical">@dimen/dp_10</item>
+        <item name="android:paddingHorizontal">@dimen/dp_34</item>
+        <item name="android:textColor">@color/colorButtonText</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:stateListAnimator">@null</item>
-        <item name="android:maxLines">1</item>
-        <item name="android:includeFontPadding">false</item>
-    </style>
-
-    <style name="BoldTextButtonStyle" parent="Widget.AppCompat.Button">
-        <item name="fontFamily">@font/gmp_ref_typeface_brand_bold</item>
-        <item name="android:textSize">@dimen/sp_16</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="android:gravity">center</item>
-        <item name="android:textAllCaps">false</item>
-        <item name="android:padding">@dimen/dp_16</item>
-        <item name="android:background">@drawable/bg_white_radius_10</item>
-        <item name="android:ellipsize">end</item>
-        <item name="android:stateListAnimator">@null</item>
-        <item name="android:maxLines">1</item>
-        <item name="android:includeFontPadding">false</item>
     </style>
 
 </resources>
