--- a/app/src/main/res/drawable/ic_password_eye_close.xml
+++ b/app/src/main/res/drawable/ic_password_eye_close.xml
@@ -1,26 +1,48 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="20dp"
-    android:height="20dp"
+    android:width="24dp"
+    android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:pathData="M19.439,15.439C20.364,14.521 21.077,13.609 21.544,12.955C21.848,12.529 22,12.316 22,12C22,11.684 21.848,11.471 21.544,11.045C20.178,9.129 16.689,5 12,5C11.092,5 10.229,5.155 9.418,5.418M6.747,6.747C4.731,8.107 3.242,9.943 2.456,11.045C2.152,11.471 2,11.684 2,12C2,12.316 2.152,12.529 2.456,12.955C3.822,14.871 7.311,19 12,19C13.991,19 15.765,18.256 17.253,17.253"
+      android:pathData="M14.53,9.47L9.47,14.53C8.82,13.88 8.42,12.99 8.42,12C8.42,10.02 10.02,8.42 12,8.42C12.99,8.42 13.88,8.82 14.53,9.47Z"
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
-      android:strokeColor="#010D15"
+      android:strokeColor="#292D32"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M9.858,10C9.328,10.53 9,11.262 9,12.071C9,13.689 10.311,15 11.929,15C12.738,15 13.47,14.672 14,14.142"
-      android:strokeWidth="1.5"
-      android:fillColor="#00000000"
-      android:strokeColor="#EF5C0A"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M3,3L21,21"
+      android:pathData="M17.82,5.77C16.07,4.45 14.07,3.73 12,3.73C8.47,3.73 5.18,5.81 2.89,9.41C1.99,10.82 1.99,13.19 2.89,14.6C3.68,15.84 4.6,16.91 5.6,17.77"
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
-      android:strokeColor="#EF5C0A"
+      android:strokeColor="#292D32"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M8.42,19.53C9.56,20.01 10.77,20.27 12,20.27C15.53,20.27 18.82,18.19 21.11,14.59C22.01,13.18 22.01,10.81 21.11,9.4C20.78,8.88 20.42,8.39 20.05,7.93"
+      android:strokeLineJoin="round"
+      android:strokeWidth="1.5"
+      android:fillColor="#00000000"
+      android:strokeColor="#292D32"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M15.51,12.7C15.25,14.11 14.1,15.26 12.69,15.52"
+      android:strokeLineJoin="round"
+      android:strokeWidth="1.5"
+      android:fillColor="#00000000"
+      android:strokeColor="#292D32"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M9.47,14.53L2,22"
+      android:strokeLineJoin="round"
+      android:strokeWidth="1.5"
+      android:fillColor="#00000000"
+      android:strokeColor="#292D32"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M22,2L14.53,9.47"
+      android:strokeLineJoin="round"
+      android:strokeWidth="1.5"
+      android:fillColor="#00000000"
+      android:strokeColor="#292D32"
       android:strokeLineCap="round"/>
 </vector>
