--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -43,12 +43,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvApiResponse" />
 
-    <com.basalbody.app.utils.BasalTextInputLayout
+    <com.basalbody.app.utils.BasalTextField
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/btnTermCondition"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginHorizontal="@dimen/dp_20"/>
+        app:btf_drawableStart="@drawable/ic_email"
+        app:btf_labelText="Email"
+        app:btf_inputType="textEmailAddress"
+        app:btf_imeOptions="actionSearch"
+        app:btf_hint="Enter your email here"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
