--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -40,7 +40,7 @@
         <attr name="maxLines" format="integer" min="0" />
         <attr name="minLines" format="integer" min="1" />
         <attr name="lines" format="integer" min="1" />
-
+        <attr name="labelText" format="string"/>
         <attr name="singleLine" format="boolean" />
 
         <attr name="lineSpacingExtra" format="float" />
@@ -81,6 +81,71 @@
             <flag name="extraLight" value="6" />
         </attr>
     </declare-styleable>
+
+    <declare-styleable name="BasalTextField">
+        <attr name="btf_inputType">
+            <flag name="none" value="0x00000000" />
+            <flag name="text" value="0x00000001" />
+            <flag name="textCapCharacters" value="0x00001001" />
+            <flag name="textCapWords" value="0x00002001" />
+            <flag name="textCapSentences" value="0x00004001" />
+            <flag name="textAutoCorrect" value="0x00008001" />
+            <flag name="textAutoComplete" value="0x00010001" />
+            <flag name="textMultiLine" value="0x00020001" />
+            <flag name="textImeMultiLine" value="0x00040001" />
+            <flag name="textNoSuggestions" value="0x00080001" />
+            <flag name="textEnableTextConversionSuggestions" value="0x00100001" />
+            <flag name="textUri" value="0x00000011" />
+            <flag name="textEmailAddress" value="0x00000021" />
+            <flag name="textEmailSubject" value="0x00000031" />
+            <flag name="textShortMessage" value="0x00000041" />
+            <flag name="textLongMessage" value="0x00000051" />
+            <flag name="textPersonName" value="0x00000061" />
+            <flag name="textPostalAddress" value="0x00000071" />
+            <flag name="textPassword" value="0x00000081" />
+            <flag name="textVisiblePassword" value="0x00000091" />
+            <flag name="textWebEditText" value="0x000000a1" />
+            <flag name="textFilter" value="0x000000b1" />
+            <flag name="textPhonetic" value="0x000000c1" />
+            <flag name="textWebEmailAddress" value="0x000000d1" />
+            <flag name="textWebPassword" value="0x000000e1" />
+            <flag name="number" value="0x00000002" />
+            <flag name="numberSigned" value="0x00001002" />
+            <flag name="numberDecimal" value="0x00002002" />
+            <flag name="numberPassword" value="0x00000012" />
+            <flag name="phone" value="0x00000003" />
+            <flag name="datetime" value="0x00000004" />
+            <flag name="date" value="0x00000014" />
+            <flag name="time" value="0x00000024" />
+        </attr>
+
+        <attr name="btf_maxLines" format="integer" min="0" />
+        <attr name="btf_minLines" format="integer" min="1" />
+        <attr name="btf_lines" format="integer" min="1" />
+        <attr name="btf_labelText" format="string"/>
+        <attr name="btf_singleLine" format="boolean" />
+
+        <attr name="btf_lineSpacingExtra" format="float" />
+
+        <attr name="btf_maxLength" format="integer" min="0" />
+
+        <attr name="btf_imeOptions">
+            <flag name="actionSearch" value="0x00000003" />
+            <flag name="actionSend" value="0x00000004" />
+            <flag name="actionNext" value="0x00000005" />
+            <flag name="actionDone" value="0x00000006" />
+        </attr>
+
+        <attr name="btf_isPassword" format="boolean"/>
+        <!--pass "[a-zA-Z0-9.,@ ]+" in value of digits for add that digits and add character that you want to use in field - like: .,@# etc-->
+        <!--"[a-zA-Z ]+" this will allow only small, capital & space-->
+        <attr name="btf_digits" format="string" />
+        <attr name="btf_hint" format="string"/>
+
+        <attr name="btf_drawableEnd" format="reference|color" />
+        <attr name="btf_drawableStart" format="reference|color" />
+    </declare-styleable>
+
     <!--Below portion is for custom calender view-->
     <!-- The xml resource that is inflated and used as the day cell view, must be provided. -->
     <attr name="cv_dayViewResource" format="reference" />
