--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,4 +26,7 @@
     <color name="shimmerColor">#6D6D6D</color>
     <color name="md_green_A700">#00C853</color>
     <color name="md_red_A700">#D50000</color>
+
+    <color name="colorText_263238">#263238</color>
+    <color name="colorText_4B4B4B">#4B4B4B</color>
 </resources>
