--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -33,6 +33,8 @@
         <item name="android:drawablePadding">@dimen/dp_10</item>
         <item name="android:paddingVertical">@dimen/dp_10</item>
         <item name="android:paddingHorizontal">@dimen/dp_34</item>
+        <item name="android:minWidth">@dimen/dp_0</item>
+        <item name="android:minHeight">@dimen/dp_0</item>
         <item name="android:textColor">@color/colorButtonText</item>
         <item name="android:textAllCaps">false</item>
     </style>
@@ -47,6 +49,18 @@
         <item name="android:paddingHorizontal">@dimen/dp_34</item>
         <item name="android:textColor">@color/colorButtonText</item>
         <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="BNVTextStyleActive">
+        <item name="android:textColor">@color/textColor</item>
+        <item name="android:fontFamily">@font/geist_semi_bold</item>
+        <item name="android:textSize">@dimen/sp_12</item>
+    </style>
+
+    <style name="BNVTextStyleInactive">
+        <item name="android:textColor">@color/textColorGray</item>
+        <item name="android:fontFamily">@font/geist_regular</item>
+        <item name="android:textSize">@dimen/sp_12</item>
     </style>
 
 </resources>
