--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
+    <color name="black">#000000</color>
+    <color name="black2">#1C1C1C</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#EB4755</color>
     <color name="colorPrimary">#FFBBCE</color>
@@ -9,6 +10,8 @@
     <color name="colorDivider">#9A9A9A</color>
     <color name="color_edittext_hint">#9A9A9A</color>
     <color name="color_edittext_text">#000000</color>
+    <color name="colorGray716569">#716569</color>
+    <color name="colorPinkDC3556">#DC3556</color>
 
 
 
