--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="color_edittext_text">#000000</color>
     <color name="colorGray716569">#716569</color>
     <color name="colorPinkDC3556">#DC3556</color>
+    <color name="color070707">#070707</color>
 
 
 
