--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="colorGray716569">#716569</color>
     <color name="colorPinkDC3556">#DC3556</color>
     <color name="color070707">#070707</color>
+    <color name="colorB3B3B3">#B3B3B3</color>
 
 
 
