--- a/app/src/main/res/layout/fragment_bluetooth.xml
+++ b/app/src/main/res/layout/fragment_bluetooth.xml
@@ -27,18 +27,10 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="@dimen/dp_10" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/glBottom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_end="@dimen/dp_24" />
-
     <com.basalbody.app.utils.BasalTextView
         android:id="@+id/tvTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:drawableStart="@drawable/ic_back"
         android:gravity="center"
         android:paddingVertical="@dimen/dp_5"
         android:text="Bluetooth"
@@ -49,10 +41,19 @@
         app:layout_constraintTop_toTopOf="@id/glTop"
         app:textStyle="semiBold" />
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/imgBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_back"
+        app:layout_constraintBottom_toBottomOf="@id/tvTitle"
+        app:layout_constraintStart_toStartOf="@id/glStart"
+        app:layout_constraintTop_toTopOf="@id/tvTitle" />
+
     <FrameLayout
         android:id="@+id/frameBluetooth"
-        android:layout_width="@dimen/dp_300"
-        android:layout_height="@dimen/dp_300"
+        android:layout_width="@dimen/dp_280"
+        android:layout_height="@dimen/dp_280"
         android:layout_marginTop="@dimen/dp_20"
         app:layout_constraintEnd_toEndOf="@id/glEnd"
         app:layout_constraintStart_toStartOf="@id/glStart"
@@ -68,7 +69,7 @@
     </FrameLayout>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnTapToScan"
+        android:id="@+id/btnScanForDevices"
         style="@style/FilledButtonTheme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -85,6 +86,13 @@
         app:layout_constraintStart_toStartOf="@id/glStart"
         app:layout_constraintTop_toBottomOf="@id/frameBluetooth" />
 
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/grpAvailableDevices"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:constraint_referenced_ids="tvLabelAvailableDevices, rvAvailableDevices" />
+
     <com.basalbody.app.utils.BasalTextView
         android:id="@+id/tvLabelAvailableDevices"
         android:layout_width="0dp"
@@ -95,7 +103,7 @@
         android:textSize="@dimen/sp_18"
         app:layout_constraintEnd_toEndOf="@id/glEnd"
         app:layout_constraintStart_toStartOf="@id/glStart"
-        app:layout_constraintTop_toBottomOf="@id/btnTapToScan"
+        app:layout_constraintTop_toBottomOf="@id/btnScanForDevices"
         app:textStyle="semiBold" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -103,12 +111,104 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/dp_15"
+        android:clipToPadding="false"
+        android:paddingBottom="@dimen/dp_9"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toBottomOf="@id/glBottom"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/glEnd"
         app:layout_constraintStart_toStartOf="@id/glStart"
         app:layout_constraintTop_toBottomOf="@id/tvLabelAvailableDevices"
         tools:itemCount="3"
         tools:listitem="@layout/each_row_available_bluetooth_devices" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/clConnectedDevice"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_22"
+        android:background="@drawable/bg_connected_device_view"
+        android:padding="@dimen/dp_25"
+        app:layout_constraintEnd_toEndOf="@id/glEnd"
+        app:layout_constraintStart_toStartOf="@id/glStart"
+        app:layout_constraintTop_toBottomOf="@id/btnScanForDevices"
+        app:layout_goneMarginTop="@dimen/dp_30">
+
+        <com.basalbody.app.utils.BasalTextView
+            android:id="@+id/tvLabelConnectionStatus"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_5"
+            android:gravity="center"
+            android:text="@string/label_connection_status"
+            android:textColor="@color/black"
+            android:textSize="@dimen/sp_18"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:textStyle="semiBold" />
+
+        <com.basalbody.app.utils.BasalTextView
+            android:id="@+id/tvConnectedDeviceName"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_18"
+            android:gravity="center"
+            android:text="BBT Sensor 01"
+            android:textColor="@color/black"
+            android:textSize="@dimen/sp_25"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvLabelConnectionStatus"
+            app:textStyle="bold" />
+
+        <com.basalbody.app.utils.BasalTextView
+            android:id="@+id/tvConnectedDeviceType"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_8"
+            android:gravity="center"
+            android:text="BBT Sensor 01"
+            android:textColor="@color/black"
+            android:textSize="@dimen/sp_25"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvConnectedDeviceName"
+            app:textStyle="normal" />
+
+        <com.basalbody.app.utils.BasalTextView
+            android:id="@+id/tvConnectionStatus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_18"
+            android:drawableStart="@drawable/ic_green_dot"
+            android:drawablePadding="@dimen/dp_6"
+            android:gravity="center"
+            android:text="@string/label_connected"
+            android:textColor="@color/black"
+            android:textSize="@dimen/sp_18"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvConnectedDeviceType"
+            app:textStyle="normal" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnChangeConnectionStatus"
+            style="@style/FilledButtonTheme"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_30"
+            android:layout_marginBottom="@dimen/dp_5"
+            android:fontFamily="@font/geist_regular"
+            android:paddingHorizontal="@dimen/dp_10"
+            android:paddingVertical="@dimen/dp_5"
+            android:text="@string/btn_disconnect"
+            android:textColor="@color/black"
+            android:textSize="@dimen/sp_15"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvConnectionStatus" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
