--- a/app/src/main/res/layout/week_calendar_day_view.xml
+++ b/app/src/main/res/layout/week_calendar_day_view.xml
@@ -2,8 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:padding="@dimen/dp_5"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="@dimen/dp_5">
 
     <com.basalbody.app.utils.BasalTextView
         android:id="@+id/tvDate"
@@ -39,9 +39,9 @@
         android:layout_width="@dimen/dp_18"
         android:layout_height="@dimen/dp_18"
         android:layout_marginTop="@dimen/dp_5"
+        android:layout_marginBottom="@dimen/dp_9"
         android:src="@drawable/ic_menstruation"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="@dimen/dp_9"
         app:layout_constraintEnd_toStartOf="@id/imgDayIntercourse"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
