Set localization Add Verification code Add Forgot Pass selection Registration working

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -4,7 +4,95 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.auth.activity.ForgotPasswordActivity">
+    android:layout_height="match_parent">
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/glStart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="@dimen/dp_25" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/glEnd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="@dimen/dp_25" />
+
+    <include
+        android:id="@+id/llToolBar"
+        layout="@layout/view_toolbar"
+        android:layout_width="@dimen/dp_0"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <com.basalbody.app.utils.BasalTextView
+        android:id="@+id/tvLabel"
+        android:layout_width="@dimen/dp_0"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_58"
+        android:text="@string/lbl_forgot_password_que"
+        android:textColor="@color/colorText_4B4B4B"
+        android:textSize="@dimen/sp_24"
+        app:layout_constraintEnd_toEndOf="@id/glEnd"
+        app:layout_constraintStart_toStartOf="@id/glStart"
+        app:layout_constraintTop_toBottomOf="@id/llToolBar"
+        app:textStyle="bold" />
+
+    <com.basalbody.app.utils.BasalTextView
+        android:id="@+id/tvMessage"
+        android:layout_width="@dimen/dp_0"
+        android:layout_height="wrap_content"
+        android:text="@string/lbl_please_enter_your_email_to_reset_the_password"
+        android:textColor="@color/colorText_989898"
+        android:textSize="@dimen/sp_16"
+        app:layout_constraintEnd_toEndOf="@id/glEnd"
+        app:layout_constraintStart_toStartOf="@id/glStart"
+        app:layout_constraintTop_toBottomOf="@id/tvLabel" />
+
+    <com.basalbody.app.utils.BasalTextField
+        android:id="@+id/etEmail"
+        android:layout_width="@dimen/dp_0"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_29"
+        app:btf_drawableStart="@drawable/ic_email"
+        app:btf_hint="@string/hint_enter_your_email_here"
+        app:btf_imeOptions="actionDone"
+        app:btf_inputType="textEmailAddress"
+        app:btf_labelText="@string/lbl_email"
+        app:layout_constraintEnd_toEndOf="@id/glEnd"
+        app:layout_constraintStart_toStartOf="@id/glStart"
+        app:layout_constraintTop_toBottomOf="@+id/tvMessage" />
+
+    <com.basalbody.app.utils.BasalTextField
+        android:visibility="gone"
+        tools:visibility="visible"
+        android:id="@+id/etPhone"
+        android:layout_width="@dimen/dp_0"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_29"
+        app:btf_drawableStart="@drawable/ic_call"
+        app:btf_hint="@string/hint_enter_phone_no_here"
+        app:btf_imeOptions="actionDone"
+        app:btf_inputType="number"
+        app:btf_labelText="@string/lbl_phone_number"
+        app:btf_maxLength="10"
+        app:layout_constraintEnd_toEndOf="@id/glEnd"
+        app:layout_constraintStart_toStartOf="@id/glStart"
+        app:layout_constraintTop_toBottomOf="@+id/tvMessage" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnResetPass"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/FilledButtonTheme"
+        android:text="@string/btn_reset_password"
+        android:layout_marginBottom="@dimen/dp_36"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@id/glStart"
+        app:layout_constraintEnd_toEndOf="@id/glEnd"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
