--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -35,7 +35,7 @@
         android:layout_width="@dimen/dp_0"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_58"
-        android:text="@string/lbl_enter_the_verification_code"
+        android:text="@string/lbl_set_a_new_password"
         android:textColor="@color/colorText_4B4B4B"
         android:textSize="@dimen/sp_24"
         app:layout_constraintEnd_toEndOf="@id/glEnd"
@@ -47,46 +47,44 @@
         android:id="@+id/tvMessage"
         android:layout_width="@dimen/dp_0"
         android:layout_height="wrap_content"
-        tools:text="@string/app_name"
+        android:text="@string/lbl_create_a_new_password_ensure_it_differs_from_previous_ones_for_security"
         android:textColor="@color/colorText_989898"
         android:textSize="@dimen/sp_16"
         app:layout_constraintEnd_toEndOf="@id/glEnd"
         app:layout_constraintStart_toStartOf="@id/glStart"
         app:layout_constraintTop_toBottomOf="@id/tvLabel" />
 
-    <com.basalbody.app.utils.otp.view.OtpView
-        android:id="@+id/viewOtp"
+    <com.basalbody.app.utils.BasalTextField
+        android:id="@+id/etPass"
         android:layout_width="@dimen/dp_0"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_30"
-        app:layout_constraintStart_toStartOf="@id/glStart"
-        app:layout_constraintEnd_toEndOf="@id/glEnd"
-        app:layout_constraintTop_toBottomOf="@+id/tvMessage"/>
-
-    <com.basalbody.app.utils.BasalTextView
-        android:id="@+id/tvTimer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="01:20 sec"
-        android:textColor="@color/colorText_989898"
-        android:textSize="@dimen/sp_14"
-        android:layout_marginTop="@dimen/dp_30"
+        android:layout_marginTop="@dimen/dp_29"
+        app:btf_drawableEnd="@drawable/ic_password_eye_close"
+        app:btf_drawableStart="@drawable/ic_password_lock"
+        app:btf_hint="@string/hint_enter_password_here"
+        app:btf_imeOptions="actionNext"
+        app:btf_inputType="textPassword"
+        app:btf_isPassword="true"
+        app:btf_labelText="@string/lbl_password"
         app:layout_constraintEnd_toEndOf="@id/glEnd"
         app:layout_constraintStart_toStartOf="@id/glStart"
-        app:layout_constraintTop_toBottomOf="@id/viewOtp" />
+        app:layout_constraintTop_toBottomOf="@+id/tvMessage" />
 
-    <com.basalbody.app.utils.BasalTextView
-        android:id="@+id/tvResend"
-        android:layout_width="wrap_content"
+    <com.basalbody.app.utils.BasalTextField
+        android:id="@+id/etConfirmPass"
+        android:layout_width="@dimen/dp_0"
         android:layout_height="wrap_content"
-        android:text="@string/lbl_don_t_receive_code_re_send"
-        android:textColor="@color/colorText_989898"
-        android:textSize="@dimen/sp_14"
         android:layout_marginTop="@dimen/dp_20"
-        app:layout_goneMarginTop="@dimen/dp_30"
+        app:btf_drawableEnd="@drawable/ic_password_eye_close"
+        app:btf_drawableStart="@drawable/ic_password_lock"
+        app:btf_hint="@string/hint_enter_password_here"
+        app:btf_imeOptions="actionDone"
+        app:btf_inputType="textPassword"
+        app:btf_isPassword="true"
+        app:btf_labelText="@string/lbl_confirm_password"
         app:layout_constraintEnd_toEndOf="@id/glEnd"
         app:layout_constraintStart_toStartOf="@id/glStart"
-        app:layout_constraintTop_toBottomOf="@id/tvTimer" />
+        app:layout_constraintTop_toBottomOf="@+id/etPass" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnSubmit"
