--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -21,7 +21,7 @@
         android:id="@+id/btnNext"
         style="@style/FilledButtonTheme"
         android:layout_width="wrap_content"
-        android:text="Next"
+        android:text="@string/btn_next"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/dp_20"
         app:layout_constraintEnd_toEndOf="parent"
@@ -32,7 +32,7 @@
         android:id="@+id/btnSkip"
         style="@style/OutlinedButtonTheme"
         android:layout_width="wrap_content"
-        android:text="Skip"
+        android:text="@string/btn_skip"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/dp_44"
         app:layout_constraintEnd_toEndOf="parent"
