--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,42 +34,38 @@
                 android:orientation="vertical"
                 app:layout_constraintGuide_end="@dimen/dp_25" />
 
-            <com.basalbody.app.utils.BasalTextView
-                android:id="@+id/lblLogin"
-                android:layout_width="wrap_content"
+            <include
+                android:id="@+id/llToolBar"
+                layout="@layout/view_toolbar"
+                android:layout_width="@dimen/dp_0"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp_58"
-                android:text="Login"
-                android:textColor="@color/colorText_4B4B4B"
-                android:textSize="@dimen/sp_18"
-                app:layout_constraintEnd_toEndOf="@id/glEnd"
-                app:layout_constraintStart_toStartOf="@id/glStart"
                 app:layout_constraintTop_toTopOf="parent"
-                app:textStyle="semiBold" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
             <com.basalbody.app.utils.BasalTextView
-                android:id="@+id/lblWelcome"
+                android:id="@+id/tvLabel"
                 android:layout_width="@dimen/dp_0"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_58"
-                android:text="Welcome"
+                android:text="@string/lbl_welcome"
                 android:textColor="@color/colorText_4B4B4B"
                 android:textSize="@dimen/sp_24"
                 app:layout_constraintEnd_toEndOf="@id/glEnd"
                 app:layout_constraintStart_toStartOf="@id/glStart"
-                app:layout_constraintTop_toBottomOf="@id/lblLogin"
+                app:layout_constraintTop_toBottomOf="@id/llToolBar"
                 app:textStyle="bold" />
 
             <com.basalbody.app.utils.BasalTextView
-                android:id="@+id/tvWelcomeMessage"
+                android:id="@+id/tvMessage"
                 android:layout_width="@dimen/dp_0"
                 android:layout_height="wrap_content"
-                android:text="Sign in to continue!"
+                android:text="@string/lbl_sign_in_to_continue"
                 android:textColor="@color/colorText_989898"
                 android:textSize="@dimen/sp_16"
                 app:layout_constraintEnd_toEndOf="@id/glEnd"
                 app:layout_constraintStart_toStartOf="@id/glStart"
-                app:layout_constraintTop_toBottomOf="@id/lblWelcome" />
+                app:layout_constraintTop_toBottomOf="@id/tvLabel" />
 
             <com.basalbody.app.utils.BasalTextField
                 android:id="@+id/etEmail"
@@ -77,13 +73,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_29"
                 app:btf_drawableStart="@drawable/ic_email"
-                app:btf_hint="Enter your email here"
+                app:btf_hint="@string/hint_enter_your_email_here"
                 app:btf_imeOptions="actionNext"
                 app:btf_inputType="textEmailAddress"
-                app:btf_labelText="Email"
+                app:btf_labelText="@string/lbl_email"
                 app:layout_constraintEnd_toEndOf="@id/glEnd"
                 app:layout_constraintStart_toStartOf="@id/glStart"
-                app:layout_constraintTop_toBottomOf="@+id/tvWelcomeMessage" />
+                app:layout_constraintTop_toBottomOf="@+id/tvMessage" />
 
             <com.basalbody.app.utils.BasalTextField
                 android:id="@+id/etPass"
@@ -92,11 +88,11 @@
                 android:layout_marginTop="@dimen/dp_20"
                 app:btf_drawableStart="@drawable/ic_password_lock"
                 app:btf_drawableEnd="@drawable/ic_password_eye_close"
-                app:btf_hint="Enter password here"
+                app:btf_hint="@string/hint_enter_password_here"
                 app:btf_imeOptions="actionDone"
                 app:btf_inputType="textPassword"
-                app:btf_labelText="Password"
                 app:btf_isPassword="true"
+                app:btf_labelText="@string/lbl_password"
                 app:layout_constraintEnd_toEndOf="@id/glEnd"
                 app:layout_constraintStart_toStartOf="@id/glStart"
                 app:layout_constraintTop_toBottomOf="@+id/etEmail" />
@@ -106,65 +102,77 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_15"
-                android:text="Frogot Password?"
-                app:textStyle="semiBold"
+                android:text="@string/lbl_forgot_password_que"
                 android:textColor="@color/colorText_4B4B4B"
                 android:textSize="@dimen/sp_16"
                 app:layout_constraintEnd_toEndOf="@id/glEnd"
-                app:layout_constraintTop_toBottomOf="@id/etPass"/>
+                app:layout_constraintTop_toBottomOf="@id/etPass"
+                app:textStyle="semiBold" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnLogin"
+                style="@style/FilledButtonTheme"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="@style/FilledButtonTheme"
-                android:text="Login"
                 android:layout_marginTop="@dimen/dp_43"
-                app:layout_constraintStart_toStartOf="@id/glStart"
+                android:text="@string/lbl_login"
                 app:layout_constraintEnd_toEndOf="@id/glEnd"
-                app:layout_constraintTop_toBottomOf="@id/tvForgotPass"/>
+                app:layout_constraintStart_toStartOf="@id/glStart"
+                app:layout_constraintTop_toBottomOf="@id/tvForgotPass" />
 
             <com.basalbody.app.utils.BasalTextView
                 android:id="@+id/lblOrSignWith"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_43"
-                android:text="Or sign in with"
+                android:text="@string/lbl_or_sign_in_with"
                 android:textColor="@color/colorText_DC3556"
                 android:textSize="@dimen/sp_14"
-                app:layout_constraintStart_toStartOf="@id/glStart"
                 app:layout_constraintEnd_toEndOf="@id/glEnd"
-                app:layout_constraintTop_toBottomOf="@id/btnLogin"/>
+                app:layout_constraintStart_toStartOf="@id/glStart"
+                app:layout_constraintTop_toBottomOf="@id/btnLogin" />
 
             <View
                 android:layout_width="@dimen/dp_0"
                 android:layout_height="@dimen/dp_1"
-                android:background="@color/black"
                 android:layout_marginEnd="@dimen/dp_10"
-                app:layout_constraintStart_toStartOf="@id/glStart"
+                android:background="@color/black"
+                app:layout_constraintBottom_toBottomOf="@+id/lblOrSignWith"
                 app:layout_constraintEnd_toStartOf="@+id/lblOrSignWith"
-                app:layout_constraintTop_toTopOf="@+id/lblOrSignWith"
-                app:layout_constraintBottom_toBottomOf="@+id/lblOrSignWith"/>
+                app:layout_constraintStart_toStartOf="@id/glStart"
+                app:layout_constraintTop_toTopOf="@+id/lblOrSignWith" />
 
             <View
                 android:layout_width="@dimen/dp_0"
                 android:layout_height="@dimen/dp_1"
-                android:background="@color/black"
                 android:layout_marginStart="@dimen/dp_10"
-                app:layout_constraintStart_toEndOf="@+id/lblOrSignWith"
+                android:background="@color/black"
+                app:layout_constraintBottom_toBottomOf="@+id/lblOrSignWith"
                 app:layout_constraintEnd_toEndOf="@id/glEnd"
-                app:layout_constraintTop_toTopOf="@+id/lblOrSignWith"
-                app:layout_constraintBottom_toBottomOf="@+id/lblOrSignWith"/>
+                app:layout_constraintStart_toEndOf="@+id/lblOrSignWith"
+                app:layout_constraintTop_toTopOf="@+id/lblOrSignWith" />
 
             <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/ivGoogle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_g_login"
                 android:layout_marginTop="@dimen/dp_25"
-                app:layout_constraintTop_toBottomOf="@+id/lblOrSignWith"
+                android:src="@drawable/ic_g_login"
+                app:layout_constraintEnd_toEndOf="@+id/glEnd"
                 app:layout_constraintStart_toStartOf="@+id/glStart"
-                app:layout_constraintEnd_toEndOf="@+id/glEnd"/>
+                app:layout_constraintTop_toBottomOf="@+id/lblOrSignWith" />
 
+            <com.basalbody.app.utils.BasalTextView
+                android:id="@+id/tvRegisterNow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/don_t_have_an_account_register_now"
+                android:textColor="@color/colorText_989898"
+                android:textSize="@dimen/sp_14"
+                android:layout_marginBottom="@dimen/dp_30"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/glEnd"
+                app:layout_constraintStart_toStartOf="@id/glStart"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
