--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,6 +31,7 @@
     <color name="md_green_A700">#00C853</color>
     <color name="md_red_A700">#D50000</color>
 
+    <color name="color_716569">#716569</color>
     <color name="colorText_263238">#263238</color>
     <color name="colorText_4B4B4B">#4B4B4B</color>
     <color name="colorText_989898">#989898</color>
