--- a/app/src/main/res/layout/fragment_bluetooth.xml
+++ b/app/src/main/res/layout/fragment_bluetooth.xml
@@ -20,35 +20,14 @@
         android:orientation="vertical"
         app:layout_constraintGuide_end="@dimen/dp_24" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/glTop"
-        android:layout_width="wrap_content"
+    <include
+        android:id="@+id/toolBar"
+        layout="@layout/view_toolbar"
+        android:layout_width="@dimen/dp_0"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="@dimen/dp_10" />
-
-    <com.basalbody.app.utils.BasalTextView
-        android:id="@+id/tvTitle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:paddingVertical="@dimen/dp_5"
-        android:text="Bluetooth"
-        android:textColor="@color/black"
-        android:textSize="@dimen/sp_18"
-        app:layout_constraintEnd_toEndOf="@id/glEnd"
-        app:layout_constraintStart_toStartOf="@id/glStart"
-        app:layout_constraintTop_toTopOf="@id/glTop"
-        app:textStyle="semiBold" />
-
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/imgBack"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_back"
-        app:layout_constraintBottom_toBottomOf="@id/tvTitle"
-        app:layout_constraintStart_toStartOf="@id/glStart"
-        app:layout_constraintTop_toTopOf="@id/tvTitle" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <FrameLayout
         android:id="@+id/frameBluetooth"
@@ -57,7 +36,7 @@
         android:layout_marginTop="@dimen/dp_20"
         app:layout_constraintEnd_toEndOf="@id/glEnd"
         app:layout_constraintStart_toStartOf="@id/glStart"
-        app:layout_constraintTop_toBottomOf="@id/tvTitle">
+        app:layout_constraintTop_toBottomOf="@id/toolBar">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/imgBluetooth"
@@ -86,18 +65,11 @@
         app:layout_constraintStart_toStartOf="@id/glStart"
         app:layout_constraintTop_toBottomOf="@id/frameBluetooth" />
 
-    <androidx.constraintlayout.widget.Group
-        android:id="@+id/grpAvailableDevices"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:constraint_referenced_ids="tvLabelAvailableDevices, rvAvailableDevices" />
-
     <com.basalbody.app.utils.BasalTextView
         android:id="@+id/tvLabelAvailableDevices"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_36"
+        android:layout_marginTop="@dimen/dp_30"
         android:text="@string/label_list_of_available_devices"
         android:textColor="@color/black"
         android:textSize="@dimen/sp_18"
@@ -120,95 +92,5 @@
         app:layout_constraintTop_toBottomOf="@id/tvLabelAvailableDevices"
         tools:itemCount="3"
         tools:listitem="@layout/each_row_available_bluetooth_devices" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/clConnectedDevice"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_22"
-        android:background="@drawable/bg_connected_device_view"
-        android:padding="@dimen/dp_25"
-        app:layout_constraintEnd_toEndOf="@id/glEnd"
-        app:layout_constraintStart_toStartOf="@id/glStart"
-        app:layout_constraintTop_toBottomOf="@id/btnScanForDevices"
-        app:layout_goneMarginTop="@dimen/dp_30">
-
-        <com.basalbody.app.utils.BasalTextView
-            android:id="@+id/tvLabelConnectionStatus"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_5"
-            android:gravity="center"
-            android:text="@string/label_connection_status"
-            android:textColor="@color/black"
-            android:textSize="@dimen/sp_18"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:textStyle="semiBold" />
-
-        <com.basalbody.app.utils.BasalTextView
-            android:id="@+id/tvConnectedDeviceName"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_18"
-            android:gravity="center"
-            android:text="BBT Sensor 01"
-            android:textColor="@color/black"
-            android:textSize="@dimen/sp_25"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvLabelConnectionStatus"
-            app:textStyle="bold" />
-
-        <com.basalbody.app.utils.BasalTextView
-            android:id="@+id/tvConnectedDeviceType"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_8"
-            android:gravity="center"
-            android:text="BBT Sensor 01"
-            android:textColor="@color/black"
-            android:textSize="@dimen/sp_25"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvConnectedDeviceName"
-            app:textStyle="normal" />
-
-        <com.basalbody.app.utils.BasalTextView
-            android:id="@+id/tvConnectionStatus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_18"
-            android:drawableStart="@drawable/ic_green_dot"
-            android:drawablePadding="@dimen/dp_6"
-            android:gravity="center"
-            android:text="@string/label_connected"
-            android:textColor="@color/black"
-            android:textSize="@dimen/sp_18"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvConnectedDeviceType"
-            app:textStyle="normal" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnChangeConnectionStatus"
-            style="@style/FilledButtonTheme"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_30"
-            android:layout_marginBottom="@dimen/dp_5"
-            android:fontFamily="@font/geist_regular"
-            android:paddingHorizontal="@dimen/dp_10"
-            android:paddingVertical="@dimen/dp_5"
-            android:text="@string/btn_disconnect"
-            android:textColor="@color/black"
-            android:textSize="@dimen/sp_15"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvConnectionStatus" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
