--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -70,4 +70,9 @@
         <item name="cornerSize">50%</item> <!-- 50% makes it perfectly circular -->
     </style>
 
+    <style name="RadioButtonTheme" parent="Widget.AppCompat.CompoundButton.RadioButton">
+        <item name="android:minHeight">@dimen/dp_0</item>
+        <item name="android:minWidth">@dimen/dp_0</item>"
+    </style>
+
 </resources>
