--- a/app/src/main/res/drawable/bg_radio_button.xml
+++ b/app/src/main/res/drawable/bg_radio_button.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:color="@color/color_bg_edittext"
-        android:width="0.5dp"/>
-    <corners android:radius="@dimen/dp_100"/>
+    <corners android:radius="@dimen/dp_10"/>
     <solid android:color="@color/white"/>
+    <padding android:left="@dimen/dp_10"/>
 </shape>
