--- a/app/src/main/res/layout/activity_add_new_activity.xml
+++ b/app/src/main/res/layout/activity_add_new_activity.xml
@@ -30,20 +30,148 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <RadioGroup
-        android:id="@+id/rgActivity"
-        android:layout_width="0dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/rbMenstruation"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_24"
+        android:background="@drawable/bg_radio_button"
+        android:padding="@dimen/dp_10"
         app:layout_constraintStart_toStartOf="@id/glStart"
-        app:layout_constraintTop_toBottomOf="@id/toolBar"
-        app:layout_constraintEnd_toEndOf="@id/glEnd"
-        android:layout_marginTop="@dimen/dp_17">
+        app:layout_constraintTop_toBottomOf="@id/toolBar">
 
-        <androidx.appcompat.widget.AppCompatRadioButton
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/imgRBMenstruation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style=""
+            android:src="@drawable/ic_radio_selected"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    </RadioGroup>
+        <com.basalbody.app.utils.BasalTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dp_12"
+            android:text="@string/label_menstruation"
+            android:textColor="@color/black"
+            android:textSize="@dimen/sp_15"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/imgRBMenstruation"
+            app:layout_constraintTop_toTopOf="parent"
+            app:textStyle="normal" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/rbIntercourse"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dp_15"
+        android:background="@drawable/bg_radio_button"
+        android:padding="@dimen/dp_10"
+        app:layout_constraintBottom_toBottomOf="@id/rbMenstruation"
+        app:layout_constraintStart_toEndOf="@id/rbMenstruation"
+        app:layout_constraintTop_toTopOf="@id/rbMenstruation">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/imgRBIntercourse"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_radio_unselected"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.basalbody.app.utils.BasalTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dp_12"
+            android:text="@string/label_intercourse"
+            android:textColor="@color/black"
+            android:textSize="@dimen/sp_15"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/imgRBIntercourse"
+            app:layout_constraintTop_toTopOf="parent"
+            app:textStyle="normal" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.basalbody.app.utils.BasalTextField
+        android:id="@+id/etTemperature"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_30"
+        app:btf_drawableStart="@drawable/ic_temperature"
+        app:btf_hint="@string/hint_enter_temperature"
+        app:btf_inputType="numberDecimal"
+        app:btf_labelText="@string/label_temperature"
+        app:btf_maxLength="5"
+        app:layout_constraintEnd_toEndOf="@id/glEnd"
+        app:layout_constraintStart_toStartOf="@id/glStart"
+        app:layout_constraintTop_toBottomOf="@id/rbMenstruation" />
+
+    <com.basalbody.app.utils.BasalTextField
+        android:id="@+id/etDate"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_20"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:focusedByDefault="false"
+        app:btf_drawableStart="@drawable/ic_calender_24"
+        app:btf_hint="@string/hint_select_date"
+        app:btf_labelText="@string/label_date"
+        app:layout_constraintEnd_toEndOf="@id/glEnd"
+        app:layout_constraintStart_toStartOf="@id/glStart"
+        app:layout_constraintTop_toBottomOf="@id/etTemperature" />
+
+    <com.basalbody.app.utils.BasalTextView
+        android:id="@+id/tvLabelDate"
+        android:layout_width="@dimen/dp_0"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_20"
+        android:text="@string/label_note"
+        android:textColor="@color/black"
+        android:textSize="@dimen/sp_16"
+        app:layout_constraintEnd_toEndOf="@id/glEnd"
+        app:layout_constraintStart_toStartOf="@id/glStart"
+        app:layout_constraintTop_toBottomOf="@id/etDate"
+        app:textStyle="normal" />
+
+    <androidx.appcompat.widget.AppCompatEditText
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_8"
+        android:background="@drawable/bg_edit_text"
+        android:gravity="top|start"
+        android:hint="@string/hint_enter_note"
+        android:inputType="textMultiLine"
+        android:maxLines="5"
+        android:minLines="5"
+        android:padding="@dimen/dp_17"
+        android:textColor="@color/color_edittext_text"
+        android:textColorHint="@color/color_edittext_hint"
+        android:textSize="@dimen/sp_15"
+        app:layout_constraintEnd_toEndOf="@id/glEnd"
+        app:layout_constraintStart_toStartOf="@id/glStart"
+        app:layout_constraintTop_toBottomOf="@id/tvLabelDate" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnBack"
+        style="@style/FilledButtonTheme"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/dp_30"
+        android:fontFamily="@font/geist_regular"
+        android:paddingHorizontal="@dimen/dp_20"
+        android:paddingVertical="@dimen/dp_10"
+        android:text="@string/btn_add"
+        android:textColor="@color/black"
+        android:textSize="@dimen/sp_15"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
