--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -19,13 +19,13 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/dp_80"
         app:backgroundTint="@color/white"
         app:elevation="@dimen/dp_5"
         app:itemIconSize="@dimen/dp_24"
         app:itemPaddingTop="@dimen/dp_18"
         app:itemPaddingBottom="@dimen/dp_18"
-        app:itemRippleColor="@color/transparent"
+        app:itemRippleColor="@null"
         app:itemActiveIndicatorStyle="@null"
         app:itemTextAppearanceActive="@style/BNVTextStyleActive"
         app:itemTextAppearanceInactive="@style/BNVTextStyleInactive"
