--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="color070707">#070707</color>
     <color name="colorB3B3B3">#B3B3B3</color>
     <color name="color737373">#737373</color>
+    <color name="color888888">#888888</color>
 
 
 
